# backend-crash

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  Makefile  Makefile.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
database/: mod.rs
database/migrations/: Cargo.toml
database/models/: mod.rs
db/: mod.rs
db/migrations/src/: main.rs
examples/user_auth_reference/: user.rs
examples/user_auth_reference/features/auth/: dto.rs  handler.rs  service.rs
examples/user_auth_reference/features/user/: handler.rs
examples/user_auth_reference/migration/: m20220101_000001_create_user_table.rs
examples/user_auth_reference/routes/: user.rs
examples/user_auth_reference/tests/: user_test.rs
g/: Cargo.toml
g/src/: main.rs
generator/: Cargo.toml
generator/src/: main.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20220102_000002_add_user_role.rs
src/: config.rs  database.rs  extractors.rs  health.rs  lib.rs  main.rs  routes.rs
src/db/: mod.rs  setup.rs
src/extractors/: mod.rs  validated_json.rs  validated_path.rs  validated_query.rs
src/features/: mod.rs
src/features/auth/: handler.rs  service.rs
src/features/health/: handler.rs  mod.rs  repository.rs  service.rs
src/features/user/: dto.rs  handler.rs  service.rs
src/handlers/: auth.rs  user.rs
src/infra/: config.rs  error.rs  extractor.rs  mod.rs  pagination.rs  routes.rs
src/middleware/: auth.rs  mod.rs  request_id.rs
src/models/: user.rs
src/routes/: auth.rs  health.rs  mod.rs  swagger.rs  user.rs
src/utils/: crypto.rs  error.rs  jwt.rs  mod.rs
tests/: auth_test.rs  health_test.rs
tests/common/: mod.rs
