[workspace]
members = [".", "migration"]

[package]
name = "backend-crash"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["catch-panic", "compression-full", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
sea-orm = { version = "1.1.4", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
chrono = { version = "0.4.39", features = ["serde"] }
validator = { version = "0.19.0", features = ["derive"] }
migration = { path = "migration" }

