[package]
name = "migration"
version = "0.1.0"
edition = "2024"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "1.1.4", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
async-trait = "0.1"
tokio = { version = "1.52.3", features = ["full"] }

[[bin]]
name = "migration"
path = "src/main.rs"
